# catboost-wrapper-for-optuna-pruning

./: .gitignore  LICENSE  README.md  pyproject.toml
optuna_catboost/: __init__.py  classifier.py  utils.py
